argocd/argocd-server-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd

spec:
  type: LoadBalancer

  selector:
    app.kubernetes.io/name: argocd-server

  ports:
    - name: https
      port: 443
      targetPort: 8080
